@@ -28,6 +28,8 @@ allow max_search_result to be 0 to allow for arbitrary size searches
 added support for 613 command for admin to alter the data port the client is
 listening on (only works with the win32 clients)
 
+set the tcp send/recv buffer length to 16k for server-server connections
+
 Changes from 0.11
 =================
 
